# DCS_MonteCarlo

./: .gitignore  .qmake.stash  Boxmuller.hh  CMakeLists.txt  CheckInputSpectrum.cpp  CheckInputSpectrum.hh  DCS_MonteCarlo.pro  DCS_MonteCarlo.sln  DCS_MonteCarlo.vcxproj  DCS_MonteCarlo.vcxproj.filters  DCrystal_input.path  FindLoc.hh  First_crystal_angle.hh  First_crystal_angle_1_Approximation.hh  First_crystal_angle_Full.hh  Obtain_d_Lattice_temp.hh  Obtain_ypzp.hh  PseuVoigt.hh  README.md  Reach_detector.hh  Second_crystal_angle.hh  Second_crystal_angle_Full.hh  Second_crystal_angle_aproximation.hh  TrueVoig.hh  Util.cpp  Util.h  Util_cuda.cu  Util_cuda.cuh  analysie_voigt.cpp  analysie_voigt.hh  app_win32.rc  calculate_geo_corr.cpp  calculate_geo_corr.hh  configure.inl  covsrt.hh  cw.hh  dcs_gui.cpp  dcs_gui.h  dcs_gui.ui  dcs_gui_input_settings.cpp  (+77 more)
cmake/: DCSsimuWrapperConfig.cmake  DCSsimuWrapperConfig.cmake.in
include/: Util.h  dcs_montecarlo.hh  gnuplot-iostream.h  make_plot_profiles.hh  mask_test_c2.hh  obtain_time.hh  parameter_settings.h  qcustomplot.h  simuConsts.h  simuGlobals.hh  simu_starter.hh  simulation_interface.h  source_complex.hh  source_simple.hh
include_cuda/: Util_cuda.cuh  parallel_bin.cuh
res/: app_win32.rc
simuWorkspace/: Cu_anti.xlsx  DCrystal_input - Cópia.input  DCrystal_input.input  DCrystal_input_CPP.input  DCrystal_input_FORTRAN.input  DCrystal_input_varExplain.txt  Energy_spectrum.txt  Energy_spectrum_600 - Copy.txt  Energy_spectrum_singleLine.txt  Plot_crystall_responce_600_600.txt  Plot_crystall_responce_600_600_8081eV.txt  Plot_crystall_responce_600_600_original.txt  Simulation_from_06122022_223924.csv  general_output.txt
simuWorkspace/Crystal_Profiles/: 10keV_s  2.002keV_p  2.002keV_s  2.008keV_s  2.015keV_p  2.01keV_p  2.01keV_s  2.025keV_s  2.02keV_s  2.035keV_p  2.035keV_s  2.03keV_p  2.03keV_s  2.045keV_p  2.04keV_p  2.05keV_p  2.05keV_s  2.06keV_p  2.06keV_s  2.07keV_s  2.08keV_p  2.08keV_s  2.09keV_p  2.12keV_s  2.14keV_p  2.14keV_s  2.1keV_p  2.22keV_p  2.24keV_p  2.26keV_p  2.28keV_p  2.2keV_p  2.32keV_s  2.34keV_s  2.38keV_p  2.38keV_s  2.3keV_p  2.42keV_s  2.44keV_p  2.44keV_s  (+102 more)
simuWorkspace/DCSModels/: AntiConfigtext.blend  AntiConfigtext.blend1  AntiConfigtext.mtl  Apperturetext.blend  Apperturetext.mtl  C1text.blend  C1text.blend1  C1text.mtl  C2text.blend  C2text.blend1  C2text.mtl  Detectortext.blend1  Sourcetext.blend1  Sourcetext.mtl  Tabletext.blend  Tabletext.blend1  Tabletext.mtl  cube.blend  cube.blend1  cube.mtl  cylinder.blend
simulacoesDCS/: DCrystal_input - Cópia.input  DCrystal_input.input  DCrystal_input_CPP.input  DCrystal_input_FORTRAN.input  DCrystal_input_varExplain.txt  Energy_spectrum_600 - Cópia.txt  Energy_spectrum_600.txt  Energy_spectrum_600_full.txt  Histogram_antiparallel.txt  Histogram_parallel.txt  Plot_crystall_responce_600_600_8041eV.txt  general_output.txt
simulacoesDCS/Crystal_Profiles/: 10keV_p  2.005keV_p  2.005keV_s  2.008keV_p  2.015keV_s  2.025keV_p  2.02keV_p  2.045keV_s  2.04keV_s  2.07keV_p  2.09keV_s  2.12keV_p  2.16keV_p  2.16keV_s  2.18keV_p  2.18keV_s  2.1keV_s  2.22keV_s  2.24keV_s  2.26keV_s  2.28keV_s  2.2keV_s  2.32keV_p  2.34keV_p  2.36keV_p  2.36keV_s  2.3keV_s  2.42keV_p  2.46keV_p  2.46keV_s  2.48keV_p  2.4keV_p  2.54keV_p  2.58keV_p  2.5keV_p  2.66keV_p  2.66keV_s  2.68keV_p  2.68keV_s  2.71keV_s  (+69 more)
simulacoesDCS/DCSModels/: Detectortext.blend  Detectortext.mtl  ParaConfigtext.blend  ParaConfigtext.blend1  ParaConfigtext.mtl  Sourcetext.blend  cylinder.blend1  cylinder.mtl
src/: Util.cpp  configure.inl  dcs_montecarlo.cpp  input_settings.cpp  make_plot_profiles.cpp  mask_test_c2.cpp  obtain_time.cpp  parameter_settings.cpp  qcustomplot.cpp  qdcs3dvis.cpp  simuGlobals.cpp  simu_starter.cpp  simulation_interface.cpp  source_complex.cpp  source_simple.cpp  sserializer.inl
src_cuda/: Util_cuda.cu  parallel_bin.cu
ui/: parameter_settings.ui  simulation_window.ui
wrapper/: settings_window.hh
